--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "48": "public/48.png",
     "128": "public/128.png"
   },
-  "content_security_policy": "default-src 'self'; style-src 'unsafe-inline'; connect-src https://hacker-news.firebaseio.com/;",
+  "content_security_policy": "default-src 'self'; style-src 'unsafe-inline'; font-src data:; connect-src https://hacker-news.firebaseio.com/;",
   "chrome_url_overrides": {
     "newtab": "public/index.html"
   }
