--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "scripts": {
-    "build": "webpack",
+    "build": "ENV=production webpack",
     "watch": "webpack serve --watch"
   },
   "devDependencies": {
     "elm-hot-webpack-loader": "^1.1.7",
-    "webpack-dev-server": "^3.10.2"
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "base64-inline-loader": "^1.1.1",
+    "css-loader": "^5.0.1",
     "elm": "^0.19.1-3",
     "elm-webpack-loader": "^7.0.1",
-    "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.2",
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1"
   }
 }
